--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,11 @@
+essential.defaults.loom=0
 loom.platform=forge
 minecraft.version=1.8.9
 mod.name=PitHelper
 mod.id=pithelper
 mod.version=0.0.3
 mod.group=github.christechs.pithelper
+modGroup=github.christechs
+modBaseName=PitHelper
+
+org.gradle.jvmargs=-Xmx2G
